--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -3,7 +3,7 @@
     top: 0;
     width: 100%;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.7);
     color: black;
     display: flex;
     justify-content: center;
@@ -13,43 +13,83 @@
 
 .popup-inner {
     position: relative;
-    padding: 23px;
-    width: 60%;
-    max-width: 700px;
-    background: #151515;
+    padding: 20px;
+    width: 65%;
+    max-width: 272px;
+    /* height: 450px; */
+    background-color: #3b3af5;
     color: white;
-    border-radius: 17px;
-    margin-top: -25px;
+    border-radius: 20px;
+    bottom: 6%;
+}
+
+.popup-inner-title {
+    display: flex;
+}
+
+.contact-title {
+    border-bottom: 1px solid;
+    color: white;
+    font-size: 44px;
+    margin: auto;
+    padding: 135px 15px;
+    padding-bottom: 30px;
+    text-align: left;
+    width: 100%;
 }
 
 .popup-inner .close-btn {
     position: absolute;
-    top: -3px;
-    font-size: large;
+    top: 0px;
+    font-size: initial;
     background: none;
-    right: -8px;
+    right: -6px;
+    color: #bebebe;
 }
 
-.menu {
+.popup-inner-menu {
     align-content: center;
     align-items: center;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin: 20px 0px 20px 0px;
+    margin-top: 20px;
 }
 
-.items {
-    padding: 5px;
+.popup-inner-items {
+    padding: 5px 15px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
 
-.contact-title {
-    padding: 4px;
-    color: white;
-    text-align: center;
-    margin: auto;
-}
 
-.items-title {
+.popup-inner-items-title {
     margin-bottom: 0px;
+    font-size: 20px;
+}
+
+@media only screen and (min-width: 993px) {
+    .popup-inner {
+        position: relative;
+        padding: 20px;
+        width: 65%;
+        max-width: 334px;
+        /* height: 450px; */
+        background-color: #3b3af5;
+        color: white;
+        border-radius: 20px;
+        bottom: 2%;
+    }
+
+    .contact-title {
+        font-size: 61px;
+        padding: 139px 15px;
+        padding-bottom: 23px;
+    }
+
+    .popup-inner-menu {
+        margin-top: 34px;
+        margin-bottom: 10px;
+    }
 }
