--- a/src/components/Home/HomeItems/Jobs/Jobs.css
+++ b/src/components/Home/HomeItems/Jobs/Jobs.css
@@ -17,8 +17,7 @@
     letter-spacing: .004em;
     line-height: 1.125;
     margin: 0px;
-    padding-top: 50px;
-    padding-bottom: 15px;
+    padding: 50px 10px 15px 10px;
 }
 
 @media only screen and (min-width: 992px) {
