--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,44 +1,41 @@
-.popup {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.7);
-    color: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 12123;
-}
-
-.popup-inner {
+.Contact {
     position: relative;
-    padding: 20px;
-    width: 65%;
-    max-width: 272px;
-    /* height: 450px; */
-    background-color: #3b3af5;
-    color: white;
-    border-radius: 20px;
-    bottom: 6%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 400px;
+    padding: 80px 10vw;
+    padding-top: 50px;
+    background: #f5f5f7;
+    color: black;
 }
 
-.popup-inner-title {
-    display: flex;
+.infos {
+    width: 100%;
+    height: 238px;
+    max-width: 390px;
+    margin: 0;
+    background: white;
+    border-radius: 20px;
+    font-family: 'CabinetGrotesk-Bold';
+    margin-bottom: auto;
 }
 
 .contact-title {
-    border-bottom: 1px solid;
-    color: white;
-    font-size: 44px;
-    margin: auto;
-    padding: 135px 15px;
-    padding-bottom: 30px;
-    text-align: left;
-    width: 100%;
+    display: flex;
+    margin-top: auto;
+    max-width: 390px;
 }
 
-.popup-inner .close-btn {
+.contact-title {
+    font-size: 44px;
+    margin: auto;
+    text-align: center;
+    width: 100%;
+    font-family: 'CabinetGrotesk-Bold';
+}
+
+.contact-inner .close-btn {
     position: absolute;
     top: 0px;
     font-size: initial;
@@ -47,49 +44,44 @@
     color: #bebebe;
 }
 
-.popup-inner-menu {
+.contact-inner-menu {
+    /* height: 200px; */
     align-content: center;
     align-items: center;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin-top: 20px;
+    height: inherit;
 }
 
-.popup-inner-items {
-    padding: 5px 15px;
+.contact-inner-items {
+    padding: 15px 30px;
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
 
+.contact-inner-items a {
+    font-weight: 500;
+    text-decoration: revert;
+    /* color: black; */
+}
 
-.popup-inner-items-title {
+.contact-inner-items-title {
     margin-bottom: 0px;
     font-size: 20px;
 }
 
-@media only screen and (min-width: 993px) {
-    .popup-inner {
+@media only screen and (min-width: 992px) {
+    .Contact {
         position: relative;
-        padding: 20px;
-        width: 65%;
-        max-width: 334px;
-        /* height: 450px; */
-        background-color: #3b3af5;
-        color: white;
-        border-radius: 20px;
-        bottom: 2%;
+        min-height: 0px;
+        padding: 0;
+        padding-bottom: 85px;
     }
 
     .contact-title {
-        font-size: 61px;
-        padding: 139px 15px;
-        padding-bottom: 23px;
-    }
-
-    .popup-inner-menu {
-        margin-top: 34px;
-        margin-bottom: 10px;
+        padding: 26px 21px;
+        padding-bottom: 0px;
     }
 }
