--- a/src/components/Home/HomeItems/Jobs/Jobs.css
+++ b/src/components/Home/HomeItems/Jobs/Jobs.css
@@ -2,26 +2,30 @@
     width: 100vw;
     background: white;
     padding-bottom: 20px;
+    color: #030405;
+    font-family: 'CabinetGrotesk-Bold';
 }
 
 .jobs-title {
-
     /* background-image: -webkit-linear-gradient(30deg, #007aff, #32cbfc);
     font-family: 'CabinetGrotesk-Black';
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent; */
-    color: #030405;
-    font-family: 'CabinetGrotesk-Black';
-    font-size: 34px;
+    font-size: 44px;
     letter-spacing: .004em;
     line-height: 1.125;
     margin: 0px;
-    padding: 50px 10px 15px 10px;
+    padding: 50px 24px 0px 24px;
 }
 
+.jobs-subtitle {
+    font-family: 'CabinetGrotesk-Medium';
+}
+
+/* 
 @media only screen and (min-width: 992px) {
     .jobs-title {
-        font-size: 3em;
+        font-size: 44em;
     }
-}
+} */
