--- a/src/components/Home/HomeItems/Slider/Slider.css
+++ b/src/components/Home/HomeItems/Slider/Slider.css
@@ -16,6 +16,43 @@
     object-fit: cover;
 }
 
+.swiper-button-prev,
+.swiper-button-next {
+    width: 37px !important;
+    height: 37px !important;
+}
+
+.swiper-button-prev {
+    left: 20px !important;
+}
+
+.swiper-button-next {
+    right: 20px !important;
+}
+
+.swiper-button-next::after {
+    content: 'next' !important;
+    font-size: 15px !important;
+    color: darkslategrey;
+    line-height: 36px !important;
+    background: lightgrey;
+    border-radius: 50%;
+    width: 100%;
+    height: 100%;
+}
+
+
+.swiper-button-prev::after {
+    content: 'prev' !important;
+    font-size: 15px !important;
+    color: darkslategrey;
+    line-height: 36px !important;
+    background: lightgrey;
+    border-radius: 50%;
+    width: 100%;
+    height: 100%;
+}
+
 @media only screen and (min-width: 600px) {
     .slider {
         height: 550px;
