--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,22 @@ body {
   min-height: 100vh;
 }
 
+.blue {
+  background: #3c31dd;
+}
+
+.red {
+  background: #dd3f31;
+}
+
+.pink {
+  background: #ff0066;
+}
+
+.dark {
+  background: #0f0f10;
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
