--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -73,3 +73,13 @@
         max-width: 100%;
     }
 }
+
+@media only screen and (min-width: 990px) {
+    .swiper-button-prev {
+        left: 6vw !important;
+    }
+
+    .swiper-button-next {
+        right: 6vw !important;
+    }
+}
