--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,9 +1,9 @@
-.Contact {
+#Contact {
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 400px;
+    min-height: 650px;
     padding: 80px 10vw;
     padding-top: 50px;
     background: #f5f5f7;
@@ -25,14 +25,12 @@
     display: flex;
     margin-top: auto;
     max-width: 390px;
-}
-
-.contact-title {
     font-size: 44px;
     margin: auto;
     text-align: center;
     width: 100%;
     font-family: 'CabinetGrotesk-Bold';
+    margin-bottom: 0;
 }
 
 .contact-inner .close-btn {
@@ -45,7 +43,6 @@
 }
 
 .contact-inner-menu {
-    /* height: 200px; */
     align-content: center;
     align-items: center;
     display: flex;
@@ -64,7 +61,6 @@
 .contact-inner-items a {
     font-weight: 500;
     text-decoration: revert;
-    /* color: black; */
 }
 
 .contact-inner-items-title {
@@ -73,7 +69,7 @@
 }
 
 @media only screen and (min-width: 992px) {
-    .Contact {
+    #Contact {
         position: relative;
         min-height: 0px;
         padding: 0;
