--- a/src/index.css
+++ b/src/index.css
@@ -33,20 +33,33 @@ body {
   min-height: 100vh;
 }
 
-.blue {
-  background: #3c31dd;
+.darkfont {
+  color: black;
 }
 
-.red {
-  background: #dd3f31;
+.bluedarkfont {
+  background: darkblue;
 }
 
-.pink {
-  background: #ff0066;
+.whitebgrd {
+  background: white;
 }
 
-.dark {
-  background: #0f0f10;
+.stars-color {
+  color: rgb(240 167 41);
+}
+
+.bigTitle {
+  /* background-image: -webkit-linear-gradient(30deg, #007aff, #32cbfc);
+  font-family: 'CabinetGrotesk-Black';
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent; */
+  font-size: 44px;
+  letter-spacing: .004em;
+  line-height: 1.125;
+  margin: 0px;
+  padding: 50px 24px 19px 24px;
 }
 
 h1 {
