--- a/src/components/Studies/Studies.css
+++ b/src/components/Studies/Studies.css
@@ -85,10 +85,6 @@
         padding-right: 0px;
         margin: 15px;
     }
-
-    .items_tile {
-        height: auto;
-    }
 }
 
 @media only screen and (min-width: 992px) {
@@ -97,7 +93,7 @@
         flex-direction: row;
         flex-wrap: wrap;
         align-items: baseline;
-        justify-content: space-around;
+        justify-content: space-evenly;
         width: 100%;
         padding: 0;
         padding-bottom: 40px;
