--- a/src/components/Feedback/Feedback.css
+++ b/src/components/Feedback/Feedback.css
@@ -10,6 +10,7 @@
     overflow: scroll;
     padding-bottom: 40px;
     padding-left: 40px;
+    padding-top: 10px;
     scrollbar-width: none;
     -ms-overflow-style: -ms-autohiding-scrollbar;
 }
