--- a/src/index.css
+++ b/src/index.css
@@ -50,16 +50,16 @@ body {
 }
 
 .bigTitle {
-  /* background-image: -webkit-linear-gradient(30deg, #007aff, #32cbfc);
-  font-family: 'CabinetGrotesk-Black';
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent; */
   font-size: 44px;
   letter-spacing: .004em;
   line-height: 1.125;
   margin: 0px;
   padding: 50px 24px 19px 24px;
+}
+
+.subtitles {
+  font-family: 'CabinetGrotesk-Medium';
+  margin-top: 0px;
 }
 
 h1 {
