--- a/src/components/Studies/Studies.css
+++ b/src/components/Studies/Studies.css
@@ -1,114 +1,125 @@
 .Studies {
-    background: white;
-    color: white;
+	background: white;
+	color: white;
 }
 
 .item_bigtitle {
-    font-family: 'CabinetGrotesk-Bold';
-    font-size: 34px;
-    letter-spacing: .004em;
-    line-height: 1.125;
-    padding: 40px 20px 0px 20px;
-    color: darkblue;
+	font-family: 'CabinetGrotesk-Bold';
+	font-size: 34px;
+	letter-spacing: .004em;
+	line-height: 1.125;
+	padding: 40px 20px 0px 20px;
+	color: darkblue;
 }
 
 .item_container {
-    display: flex;
-    margin: auto;
-    overflow: scroll;
-    padding-bottom: 40px;
-    padding-left: 40px;
-    scrollbar-width: none;
-    -ms-overflow-style: -ms-autohiding-scrollbar;
+	display: flex;
+	margin: auto;
+	overflow: scroll;
+	padding-bottom: 40px;
+	padding-left: 40px;
+	scrollbar-width: none;
+	-ms-overflow-style: -ms-autohiding-scrollbar;
 }
 
 .item_container::-webkit-scrollbar {
-    display: none;
+	display: none;
 }
 
 .items {
-    min-width: 285px;
-    border-radius: 10px;
-    list-style: none;
-    padding-right: 28px;
+	min-width: 285px;
+	border-radius: 10px;
+	list-style: none;
+	padding-right: 28px;
 }
 
 .items_tile {
-    position: relative;
-    padding: 20px;
-    border-radius: 20px;
-    height: 515px;
+	position: relative;
+	padding: 20px;
+	border-radius: 20px;
+	height: 515px;
+	transform-style: preserve-3d;
+	transform: perspective(100000px);
 }
 
 .items_number {
-    border: 2px solid white;
-    width: 40px;
-    height: 40px;
-    line-height: 44px;
-    padding: 10px;
-    text-align: center;
-    border-radius: 50%;
-    font-family: 'CabinetGrotesk-Black';
-    margin: auto;
+	border: 2px solid white;
+	width: 40px;
+	height: 40px;
+	line-height: 44px;
+	padding: 10px;
+	text-align: center;
+	border-radius: 50%;
+	font-family: 'CabinetGrotesk-Black';
+	margin: auto;
+	margin-top: 16px;
+	transform: translateZ(30px);
 }
 
 .items_title {
-    font-size: 25px;
-    font-family: 'CabinetGrotesk-Bold';
-    margin-bottom: 5px;
+	font-size: 25px;
+	font-family: 'CabinetGrotesk-Bold';
+	margin-bottom: 5px;
+	transform: translateZ(30px);
 }
 
 .items_subtitle {
-    font-size: 16px;
-    font-family: 'CabinetGrotesk-Bold';
-    margin-top: 10px;
-    color: rgba(255, 255, 255, 0.6);
+	font-size: 16px;
+	font-family: 'CabinetGrotesk-Bold';
+	margin-top: 10px;
+	color: rgba(255, 255, 255, 0.6);
 }
 
 .items_title2 {
-    font-size: 20px;
-    font-family: 'CabinetGrotesk-Bold';
-    margin-bottom: 10px;
+	font-size: 20px;
+	font-family: 'CabinetGrotesk-Bold';
+	margin-bottom: 10px;
+	margin-top: 0px;
+	transform: translateZ(30px);
+}
+
+.techno {
+	transform: translateZ(30px);
 }
 
 @media only screen and (min-width: 420px) {
-    .item_container {
-        flex-direction: row;
-        /* flex-wrap: wrap; */
-        /* justify-content: space-around; */
-        align-items: baseline;
-        padding: 10px;
-        /* width: 343px; */
-    }
+	.item_container {
+		flex-direction: row;
+		/* flex-wrap: wrap; */
+		/* justify-content: space-around; */
+		align-items: baseline;
+		padding: 10px;
+		/* width: 343px; */
+	}
 
-    .items {
-        padding-right: 0px;
-        margin: 15px;
-    }
+	.items {
+		padding-right: 0px;
+		margin: 15px;
+	}
 }
 
 @media only screen and (min-width: 992px) {
 
-    .item_container {
-        flex-direction: row;
-        flex-wrap: wrap;
-        align-items: baseline;
-        justify-content: space-evenly;
-        width: 100%;
-        padding: 0;
-        padding-bottom: 40px;
-    }
+	.item_container {
+		flex-direction: row;
+		flex-wrap: wrap;
+		align-items: baseline;
+		justify-content: space-evenly;
+		width: 100%;
+		padding: 0;
+		padding-bottom: 40px;
+	}
 
-    .items_tile {
-        height: 515px;
-    }
+	.items_tile {
+		height: 515px;
+	}
 
-    .item_bigtitle {
-        font-size: 44px;
-    }
+	.item_bigtitle {
+		font-size: 44px;
+	}
 
-    .items {
-        padding-right: 0px;
-        width: 230px;
-    }
+	.items {
+		padding-right: 0px;
+		width: 230px;
+	}
 }
